--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -78,6 +78,11 @@
                 android:launchMode="singleInstance"
                 android:taskAffinity=""
                 android:configChanges="orientation|keyboardHidden|keyboard|navigation"/>
+				
+		<activity
+            android:name="AlarmMath"
+            android:theme="@android:style/Theme.Holo.Dialog"
+            android:label="@string/math_dialog" /> 
 
         <receiver android:name="AlarmReceiver"
                 android:exported="false">
